# substruct_genesis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TEST_SUMMARY.md
src/: generator.rs  lib.rs
src/processor/: attributes.rs  fields.rs  mod.rs
tests/: basic_functionality.rs  complex_scenarios.rs  configuration.rs  custom_types.rs  debug_wrap.rs  edge_cases.rs  error_handling.rs  field_types.rs  integration.rs  json_fields.rs  primitive_fields.rs  real_world.rs  simple_nested.rs  struct_level_names.rs  wrap_attribute.rs
