[package]
name = "substruct-genesis"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for substruct generation"
authors = ["Verve <sol.verve@protonmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
proc-macro-error = "1.0"

[dev-dependencies]
serde_json = "1.0"
